--- a/no3.html
+++ b/no3.html
@@ -18,8 +18,8 @@
     </div>
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
-    <h1>beautiful pls Man jao na! Kitna code likh waogi😭</h1>
-    <p>bhut glt baat hai yrr😭</p>
+    <h1>Cutie pls Man jao na! Kitna code likh waogi😭</h1>
+    <p>bhohot glt baat hai yrr😭</p>
 
     <div class="btn">
       <a href="yes.html">Yes</a>
